--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link href="%PUBLIC_URL%/css/global.css" rel='stylesheet'></link>
     <title>어서보냐</title>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ca107ea6a53bb692a793ce6c268e3a8e"></script>
+    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=9sayhix3uv"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
