--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <title>어서보냐</title>
   <script type="text/javascript"
     src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6401c06f54c8e3131dd4ee04e8b251ba&libraries=services"></script>
+  <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </head>
 
 <body>
